--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <title>Ching chong ma ding dong</title>
+    <link href="style.css" rel="stylesheet"></link>
+  </head>
+  
   <img src="https://i.imgur.com/etjgJ2D.jpg" alt="Bigbang Theory" />
 </html>
