--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Ching chong ma ding dong</title>
-    <link href="style.css" rel="stylesheet"></link>
+    <link rel="stylesheet" href="style.css">
   </head>
   
   <img src="https://i.imgur.com/etjgJ2D.jpg" alt="Bigbang Theory" />
