--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Ching chong ma ding dong</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  
-  <img src="https://i.imgur.com/etjgJ2D.jpg" alt="Bigbang Theory" />
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>Ching chong ma ding dong</title>
+		<link rel="stylesheet" href="style.css">
+	</head>
+	  
+	<body>
+		<form>
+			<label for="message">Nhập cái gì đấy ;)</label></br>
+			<input type="text" id="message" name="message">
+			<a href="getrekt.html">Gửi &lt;3</a>
+		</form>
+	</body>
 </html>
